--- a/mycelium/apps/rewrite/templates/rewrite/manage/_code_textareas.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/_code_textareas.html
@@ -1,12 +1,17 @@
 <script src="{{STATIC_URL}}js/rewrite/libs/codemirror.js"></script>
 <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/codemirror/codemirror.css">
 <script src="{{STATIC_URL}}js/rewrite/libs/mode/javascript/javascript.js"></script>
+<script src="{{STATIC_URL}}js/rewrite/libs/mode/xml/xml.js"></script>
+<script src="{{STATIC_URL}}js/rewrite/libs/mode/css/css.js"></script>
+<script src="{{STATIC_URL}}js/rewrite/libs/mode/htmlmixed/htmlmixed.js"></script>
 <link rel="stylesheet" href="{{STATIC_URL}}css/rewrite/codemirror/theme/default.css">
 <script>
 	$(function(){
 		$("textarea").each(function(){
 			CodeMirror.fromTextArea($(this)[0], {
-				// your settings here
+				name: "text/html", 
+				htmlMode: true,
+				tabMode: "indent",
 			});	
 		});
 	});
