--- a/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
@@ -1,33 +1,40 @@
 {% extends "rewrite/manage/base.html" %}
 {% block js %}{{block.super}}
 	{% include "rewrite/manage/_code_textareas.html" %}
+	<script>
+	$(function(){
+		rewrite.manage.init();
+	});</script>
 {% endblock %}
 {% block manage_page_content %}
 	<a href="{% url rewrite:manage_templates %}">All Templates</a>
-	<instructions>To create or edit a template, you'll need to know some HTML. The sections below fit into the page like this:</instructions>
-	<pre>
-&lt;html&gt;
+	<instructions>To create or edit a template, you'll need to know some HTML. You can edit any of the sections in white below.</instructions>
+<form action="{% url rewrite:edit_template template.pk %}" method="POST" class="rewrite_edit_template">{% csrf_token %}
+
+{{template_form.name}}
+
+	<pre class="html_page">
+<code class="big">&lt;html&gt;
    &lt;head&gt;
-      &lt;!-- Built-in head: HTML5 Boilerplate, jQuery, jQuery UI, 1140px --&gt;
-      &lt;!-- Extra head HTML --&gt;
+</code><code>
+      &lt;title&gt;&lt;!-- Post title --&gt;&lt;/title&gt;
+      &lt;keywords&gt;&lt;!-- Post keywords --&gt;&lt;/keywords&gt;
+      &lt;description&gt;&lt;!-- Post description --&gt;&lt;/description&gt;
+      &lt;!-- Built-in head: HTML5 Boilerplate, jQuery, jQuery UI, 1140px --&gt;</code>{{template_form.extra_head_html}}<code class="big">      
    &lt;/head&gt;
-   &lt;body&gt;
-      &lt;!-- Page Header HTML --&gt;
-      &lt;main_nav&gt; &lt;!-- Main navigation (if enabled) --&gt; &lt;main_nav&gt;
-      &lt;section_nav&gt; &lt;!-- Section navigation (if enabled) --&gt; &lt;/section_nav&gt;
-
-      &lt;div id="main" role="main"&gt;
-        &lt;!-- Pre content HTML --&gt;
-        &lt;div id="page_content"&gt;&lt;!-- Page/Blog Post Content --&gt;&lt;/div&gt;
-        &lt;!-- Post content HTML --&gt;
-      &lt;/div&gt;
+   &lt;body&gt;</code><span class="body_code">
+   	  {{template_form.page_header_html}}
+      {{template_form.show_main_nav}} <code class="main_nav {% if not template_form.instance.show_main_nav %}disabled{% endif %}">&lt;main_nav&gt; &lt;!-- Main navigation --&gt; &lt;main_nav&gt;</code>
+      {{template_form.show_section_nav}} <code class="section_nav {% if not template_form.instance.show_main_nav %}disabled{% endif %}">&lt;section_nav&gt; &lt;!-- Section navigation --&gt; &lt;/section_nav&gt;</code>
+      
+         <code>&lt;div id="main" role="main"&gt;</code><span class="main_code">
+	     {{template_form.pre_content_html}}<code>            &lt;div id="page_content"&gt;
+              &lt;!-- Page Content or Blog Post will show here --&gt;
+            &lt;/div&gt;</code>{{template_form.post_content_html}}</span></span><code>
+          &lt;/div&gt;</code><code class="big">
    &lt;/body&gt;
-&lt;/html&gt;
-	</pre>
+&lt;/html&gt;</code></pre>
 
-
-	<form action="{% url rewrite:edit_template template.pk %}" method="POST" class="rewrite_edit_template">{% csrf_token %}
-		{{template_form.as_p}}
-		<input type="submit" />
+		<input type="submit" value="Save Changes" />
 	</form>
 {% endblock %}
