--- a/mycelium/apps/rewrite/templates/rewrite/manage/settings.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/settings.html
@@ -1,8 +1,10 @@
 {% extends "rewrite/manage/base.html" %}
 {% block manage_page_content %}
 	<form action="" method="POST">{% csrf_token %}
+	<section>
 	{{website_settings_form.as_p}}
 	{{blog_settings_form.as_p}}
+	</section>
 		<input class="ui-button ui-widget ui-state-default ui-corner-all" type="submit" value="Save Settings" >
 	</form>
 {% endblock %}
