--- a/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
@@ -1,7 +1,7 @@
 #rewrite_admin_bar {
 	display: block;
 	width: 100%;	
-	min-height: 60px;
+	/*min-height: 75px;*/
 	background-color: #FAFAFA;
 	position: relative;
 }
@@ -50,4 +50,16 @@
 }
 #rewrite_admin_bar .rewrite_associated_form {
 	display: none;
+}
+#rewrite_admin_bar .rewrite_form_container {
+	display: none;
+}
+#rewrite_admin_bar .admin_bar_title {
+	text-align: center;
+	width: 100%;
+	display: block;
+	position: absolute;
+	top: 8px;
+	font-size: 16px;
+	color: #AAA;
 }
