--- a/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
+++ b/mycelium/apps/rewrite/static/css/rewrite/rewrite-public.css
@@ -1,7 +1,7 @@
 #rewrite_admin_bar {
 	display: block;
 	width: 100%;	
-	/*min-height: 75px;*/
+	min-height: 30px;
 	background-color: #FAFAFA;
 	position: relative;
 }
@@ -56,7 +56,8 @@
 }
 #rewrite_admin_bar .admin_bar_title {
 	text-align: center;
-	width: 100%;
+	width: 60%;
+	left: 20%;
 	display: block;
 	position: absolute;
 	top: 8px;
