--- a/mycelium/apps/rewrite/templates/rewrite/blog_post.html
+++ b/mycelium/apps/rewrite/templates/rewrite/blog_post.html
@@ -14,5 +14,8 @@
 	<form action="" method="POST" class="blog_post_form rewrite_associated_form">
 	{{blog_post_form.as_p}}
 	</form>
-	{% include "rewrite/_admin_bar_save_and_editor.html" %}		
+	{% include "rewrite/_admin_bar_save_and_editor.html" %}
 {% endblock %}
+{% block page_content %}<h1 class="post_title">{{ page.title|default_if_none:""|safe }}</h1>
+<date>{{page.publish_date|date}}</date>
+{{ page.content|default_if_none:""|safe }}{% endblock %}
