--- a/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
+++ b/mycelium/apps/rewrite/templates/rewrite/manage/edit_template.html
@@ -7,6 +7,9 @@
 	});</script>
 {% endblock %}
 {% block manage_page_content %}
+	{% if changes_saved %}
+	<div class="in_place_changes_saved ui-state-highlight ui-corner-all"><p><icon class="ui-icon ui-icon-info"></icon>Changes Saved.</p></div>
+	{% endif %}
 	<a href="{% url rewrite:manage_templates %}" class="ui-button ui-widget ui-state-default ui-corner-all ui-button-text-only"><span class="ui-button-text">All Templates</span></a>
 	<instructions>To create or edit a template, you'll need to know some HTML. You can edit any of the sections in white below.</instructions>
 <form action="{% url rewrite:edit_template template.pk %}" method="POST" class="rewrite_edit_template">{% csrf_token %}
@@ -35,6 +38,6 @@ Name: {{template_form.name}}
    &lt;/body&gt;
 &lt;/html&gt;</code></pre>
 
-		<input class="ui-button ui-widget ui-state-default ui-corner-all" type="submit" value="Save Changes" >
+		<input class="ui-button ui-widget ui-state-default ui-corner-all" type="submit" id="id_save_template_changes" value="Save Changes" >
 	</form>
 {% endblock %}
