--- a/mycelium/apps/mycelium_core/static/css/manage_accounts.css
+++ b/mycelium/apps/mycelium_core/static/css/manage_accounts.css
@@ -119,7 +119,7 @@ tabbed_box box_content {
 .account_info_form {
 	
 }
-.account_info_form form_field {
+form_field {
 	display: block;
 	padding: 5px 10px;
 
@@ -166,9 +166,6 @@ tabbed_box box_content {
 #new_account .generic_editable_field .edit_field input {
 	min-width: 100px;
 }
-#cboxContent {
-	/*background-color: #E6E6E6;*/
-}
 .expired_message {
 	color: red;
 	padding: 10px;
@@ -189,4 +186,16 @@ delete_object_block input, delete_object_block a {
 }
 form_field.account_deletion {
 	margin-top: 30px;
+}
+.update_billing_form {
+	display: block;
+	background-color: #F2F2F2;
+	padding: 10px;
+	margin: 10px;
+	border-radius: 4px;
+	-moz-border-radius: 4px;	
+	display: none;
+}
+.update_billing_form .cancel_update_btn {
+	margin-left: 20px;
 }
