--- a/mycelium/apps/mycelium_core/static/css/manage_accounts.css
+++ b/mycelium/apps/mycelium_core/static/css/manage_accounts.css
@@ -109,7 +109,7 @@ tabbed_box box_content {
 .edit_mode_on.account_info_form .generic_field_label {
 	display: none;
 }
-.account_info_form label {
+.manage_account_info_page label {
 	color: #333;
 	width: 200px;
 	display: block;
@@ -122,7 +122,7 @@ tabbed_box box_content {
 form_field {
 	display: block;
 	padding: 5px 10px;
-
+	clear: left;
 }
 .account_info_form form_field .edit_field input {
 	margin-top: -5px;
@@ -190,12 +190,33 @@ form_field.account_deletion {
 .update_billing_form {
 	display: block;
 	background-color: #F2F2F2;
-	padding: 10px;
-	margin: 10px;
+	padding: 0px 10px;
+	margin: 0px 0px 30px 0px;
 	border-radius: 4px;
 	-moz-border-radius: 4px;	
+	float: left;
+	width: auto;
 	display: none;
 }
 .update_billing_form .cancel_update_btn {
 	margin-left: 20px;
+}
+.payment-errors {
+	display: block;
+	color: red;
+	margin: 10px;
+}
+#subscription_submit {
+	margin-top: 5px;
+}
+.update_billing_form .form_actions {
+	display: block;
+	padding: 10px;
+}
+.manage_account_info_page .update_billing_form label {
+	width: 100px;
+}
+.manage_account_info_page .update_form_title {
+	font-size: 16px;
+	margin: 10px;
 }
