https for google fonts

--- a/mycelium/templates/base.html
+++ b/mycelium/templates/base.html
@@ -20,9 +20,9 @@
   {% block css %}{% endblock %}
   {% block base_js %}{% js "js/base.js" %}{% endblock %}
   {% analytical_head_bottom %}
-	<link href='http://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&v1' rel='stylesheet' type='text/css'>
-	<link href='http://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic&v1' rel='stylesheet' type='text/css'>
-	<link href="http://fonts.googleapis.com/css?family=News+Cycle:regular&v1" rel="stylesheet" type="text/css" >
+	<link href='https://fonts.googleapis.com/css?family=Droid+Sans:regular,bold&v1' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Droid+Serif:regular,italic,bold,bolditalic&v1' rel='stylesheet' type='text/css'>
+	<link href="https://fonts.googleapis.com/css?family=News+Cycle:regular&v1" rel="stylesheet" type="text/css" >
 {% endblock %}
 </head>
 {% block body %}<body {% block extra_body %}{% endblock %} env="{{ENV}}">
