--- a/mycelium/apps/flight_control/templates/flight_control/account.html
+++ b/mycelium/apps/flight_control/templates/flight_control/account.html
@@ -41,17 +41,17 @@
 				Signup Date: {{account.signup_date|date}}
 			</div>
 			<div class="info_block">
-				Last Billed: {{account.last_billing_date|date}}
+				Next Billed: {{account.next_billing_date|date}}
 			</div>
 			<div class="info_block">
-				Next Billed: {{account.chargify_next_assessment_at|date}}
+				<a href="{{account.stripe_subscription_url}}" target="_blank">Stripe Subscription</a>
 			</div>
+			{% if account.is_deactivated %}
 			<div class="info_block">
-				Account Balance: ${{account.chargify_balance|floatformat:2|intcomma}}
+				<a href="{% url accounts:delete_deactivated_account account.pk %}" target="_blank" class="warning">Delete Account</a>
 			</div>
-			<div class="info_block">
-				<a href="{{account.chargify_subscription_url}}" target="_blank">Chargify Subscription</a>
-			</div>
+			{% endif %}
+
 			<column_header>Challenges</column_header>
 			<challenge class="info_block import {% if account.challenge_has_imported_contacts %}complete{% endif %}">
 				<title_text>Import your contacts.</title_text>
