--- a/mycelium/apps/mycelium_core/static/css/flight_control.css
+++ b/mycelium/apps/mycelium_core/static/css/flight_control.css
@@ -248,3 +248,9 @@ challenge.info_block.complete {
 	background-position: 0px 5px;
 	color: #333;
 }
+.warning {
+	color: #990000;
+}
+.warning:hover {
+	color: red;
+}
