All tests passing, updated legal for account deletion.

--- a/mycelium/apps/accounts/templates/accounts/manage_account.html
+++ b/mycelium/apps/accounts/templates/accounts/manage_account.html
@@ -25,7 +25,7 @@
 {% if request.account.is_deactivated %}
 <div class="deactivated_message_header">Account Deactivated</div>
 <div class="deactivated_message">
-Your account has been deactivated because either your billing method didn't go through, or we don't have one on file for you.  We'll be in contact to check in with you before we shut it down. If we can't get in touch within a week or so, and don't see any activity from you, your account will be permanently deleted. <br/></br>
+Your account has been deactivated because either your billing method didn't go through, or we don't have one on file for you.  We'll be in contact to check in with you (you've probably already received an email and a call). If we don't hear back within a week or so, and don't see any activity within GoodCloud, your account will be permanently deleted.<br/></br>
 
 To get your account back to active, you can update your billing method below. The changes will take effect right away!<br/><br/>
 
