--- a/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_footer.html
@@ -29,9 +29,9 @@
 	</td>
 	<td>
 		<a href="{% url marketing_site:contact_us %}" class="top_link" >Contact Us</a>
+		<a href="{% url marketing_site:contact_us %}">Call 503 308-1460</a>
 		<a href="#" class="contact_button online">Online Support</a>
 		<a href="{% url marketing_site:contact_us %}">Send an Email</a>
-		<a href="{% url marketing_site:contact_us %}">Phone Call</a>
 		<a href="http://www.facebook.com/AGoodCloud" target="_blank">Facebook</a>
 		<a href="http://www.twitter.com/agoodcloud" target="_blank">Twitter</a>
 		<a href="{% url blog %}">Blog</a>
