--- a/mycelium/apps/marketing_site/templates/marketing_site/legal.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/legal.html
@@ -95,7 +95,7 @@
 		<h3>Cancellation and Termination</h3>
 		<ul>
 		<li>Verbal, physical, written or other abuse (including threats of abuse) of any GoodCloud customer, employee, member, or officer will result in immediate account termination.</li>
-		<li>You are solely responsible for properly canceling your account. You can cancel your account at any time by calling or emailing us.  A GoodCloud employee will verify your clicking on the Admin link in the global navigation bar at the top of the screen. The Admin screen provides a cancellation link. An email or phone request to cancel your account is not considered cancellation.</li>
+		<li>You are solely responsible for properly canceling your account. To cancel your account, clicking on the Admin link in the global navigation bar on the left side of the screen, then on "Manage Account", and then the "Delete Account" button.  Finally, click "Yes, Delete My Account" on the confirmation screen, and your account will be immediately and permanently deleted.  An email or phone request to cancel your account is not considered cancellation.</li>
 		<li>Your cancellation will take effect immediately and you will not be charged again. However, no refunds will be issued for any previous charges, in whole or in part.</li>
 		<li>All of your Content will be immediately deleted from the Service upon cancellation. This information can not be recovered once your account is cancelled.</li>
 		<li>We reserve the right to modify or terminate your Service for any reason, without notice at any time.</li>
