--- a/mycelium/apps/mycelium_core/static/css/dashboard.css
+++ b/mycelium/apps/mycelium_core/static/css/dashboard.css
@@ -1,6 +1,6 @@
 dashboard {
 	display: block;
-	padding: 0px 20px 20px 20px;
+	padding: 0px;
 }
 .dashboard_title {
 	font-size: 48px;
@@ -201,10 +201,25 @@ news_story .story_body {
 }
 conversation {
 	display: block;
-	padding: 4px;
+	
+	border: 1px solid #DDD;
+	border-width: 0px 0px 1px 0px;
+	padding: 4px 4px 10px 4px;
+	margin-bottom: 6px;
+
 }
 conversation .conversation_body {
 	display: block;
-	color: #666;
-	padding: 2px 8px;
+	color: #333;
+	padding: 0px 5px;
+	margin: 8px 0px 0px 20px;
+	font-size: 13px;
+}
+conversation .conversation_person {
+	font-weight: bold;
+	margin-right: 10px;
+}
+conversation .conversants, conversation .date {
+	color: #AAA;
+	font-size: 14px;
 }
