--- a/mycelium/apps/mycelium_core/static/css/mycelium_elements.css
+++ b/mycelium/apps/mycelium_core/static/css/mycelium_elements.css
@@ -1031,3 +1031,80 @@ coming_soon {
 	clear: both;
 	font-family: 'ExpresswayRegular',"Droid Sans", "Lucida Grande","DejaVu Sans","Bitstream Vera Sans",Verdana,Arial,sans-serif;	
 }
+
+#help_popup {
+	display: block;
+	position: fixed;
+	left: 130px;
+	width: 70%;
+	background: url("../images/left-arrow-light-grey.png");
+	background-repeat: no-repeat;
+	background-position: left 50%;	
+	margin-top: 20px;
+	display: none;
+}
+#help_popup_content {
+	display: block;
+	margin-left: 40px;
+	border: 4px solid #DDD;
+	background-color: #F2F2F2;
+	padding: 20px;
+	border-radius: 6px;
+	-moz-border-radius: 6px;
+	-webkit-border-radius: 6px;
+
+}
+
+#help_popup .help_header {
+	font-size: 40px;
+	color: #888;
+	display: block;
+	margin: 0px 0px 20px 0px;
+	text-align: center;
+}
+#help_popup .help_subheader {
+	text-align: center;
+	font-size: 18px;
+}
+#help_popup .more_button {
+	margin-bottom: 20px;
+	display: block;
+	background-repeat: no-repeat;
+	background-position: 18px 20px;
+	width: 90%;
+	margin-left: 5%;
+}
+
+#help_popup .more_button .button_title {
+	padding: 10px 10px 0px 100px;
+	font-size: 30px;
+	text-align: left;
+}
+#help_popup .more_button .details {
+	padding: 10px 20px 14px 20px;
+	text-align: center;
+}
+#help_popup .more_button .button_description {
+	padding-left: 100px;
+	white-space: normal;
+	font-size: 15px;
+	padding: 0px 10px 15px 100px;
+	color: #92C2FC;
+}
+
+#help_popup .more_button.phone   { background-image: url("../images/contact-phone-48.png");}
+#help_popup .more_button.online  { background-image: url("../images/contact-online-48.png");}
+#help_popup .more_button.email   { background-image: url("../images/contact-email-48.png");}
+
+#help_popup a.close_help_popup_btn, #help_popup a.close_help_popup_btn:hover {
+	position: absolute;
+	right: 20px;
+	top: 5px;
+	font-size: 30px;
+	color: #AAA;
+	text-decoration: none;
+}
+
+.gist_and_remainder .remainder, .gist_and_remainder .hide_remainder_link {
+	display: none;
+}
