--- a/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/pricing.html
@@ -29,7 +29,7 @@
 				<div class="description png_bg identical_height_block">
 				GoodCloud is just 50 dollars a month.  
 			<br/>
-			<br/>No strings, no contracts, no hidden fees. Everything included.
+			<br/>No strings, no contracts, no per-anything charges. Everything included.
 
 				</div>
 			</div>
