--- a/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/screenshots.html
@@ -34,6 +34,7 @@ $(function(){
 	 	</li>
 	 	<li><a href="{% url marketing_site:tour %}">Video Tour</a></li>
 	 	<li class="ui-tabs-selected ui-state-active"><a href="{% url marketing_site:screenshots %}">Screenshots</a></li>
+	 	<li><a href="{% url marketing_site:webinar %}">Weekly Webinar</a></li>
  	</ul>
 
 	<div class="tab_content company" id="pictures_and_words">
