--- a/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/_top_nav.html
@@ -11,6 +11,7 @@
 	<a {% current_page_link_and_class request "marketing_site:tour" "" %} >Tour</a>
 	<a {% current_page_link_and_class request "marketing_site:pricing" "" %} >Pricing</a>
 	<a {% current_page_link_and_class request "blog" "" %} >Blog</a>
+	<a {% current_page_link_and_class request "marketing_site:contact_us" "" %} >Support</a>
 	<!-- <a {% current_page_link_and_class request "marketing_site:newsletter" "" %} >News</a>  -->
 	{# <a {% current_page_link_and_class request "accounts:signup" "" %} >Log In</a> #}
 	<a {% current_page_link_and_class request "accounts:signup" "" %} >Sign Up</a>
