--- a/mycelium/apps/marketing_site/templates/marketing_site/tour.html
+++ b/mycelium/apps/marketing_site/templates/marketing_site/tour.html
@@ -9,6 +9,7 @@
 	<ul class="nav_links png_bg">
 	 	<li class="ui-tabs-selected ui-state-active"><a href="{% url marketing_site:tour %}">Video Tour</a></li>
 	 	<li><a href="{% url marketing_site:screenshots %}">Screenshots</a></li>
+	 	<li><a href="{% url marketing_site:webinar %}">Weekly Webinar</a></li>
  	</ul>
 
 	<div class="tab_content" id="video_tour">
@@ -30,18 +31,5 @@
 
 
 <div class="clearfix"></div>
-{# <a href="{% url accounts:signup %}" class="page_action png_bg">Now, try it out yourself!</a> #}
-{# Weekly Webinar #}
-{#  #}
-{# Sometimes, nothing's better than a quick tour from someone who knows the landscape.  That's why we offer two weekly webinars, to get you from start to up-and-running, quickly.   #}
-{#  #}
-{# We hold the webinars every week on: #}
-{#  #}
-{# <ul> #}
-{# <li>Tuesdays at 5pm, and #}
-{# <li>Thursdays at 1pm. #}
-{# </ul> #}
-{#  #}
-{# To sign up or learn more, <a href="mailto:support@agoodcloud.com">drop us an email</a>! #}
-{#  #}
+
 {% endblock %}
